# Fucier

./: .gitignore  Kuafoo.sln  README.md
Kuafoo/: App.xaml  App.xaml.cs  Kuafoo.csproj  MainWindow.xaml  MainWindow.xaml.cs  app.json
Kuafoo/Controllers/: AboutController.cs  FiltersController.cs  ToolsController.cs
Kuafoo/Model/: AppMap.cs  ProcessMap.cs
Kuafoo/Resources/: GlobalStyle.xaml
Kuafoo/Service/: IDownService.cs  ILoggerService.cs  IProcessService.cs
Kuafoo/Service/Impl/: DownService.cs  LoggerService.cs  ProcessService.cs
Kuafoo/Services/: IDownService.cs  ILoggerService.cs  IProcessService.cs
Kuafoo/Services/Impl/: DownService.cs  LoggerService.cs  ProcessService.cs
Kuafoo/Views/About/: Index.xaml  Index.xaml.cs
Kuafoo/Views/Tools/: Index.xaml  Index.xaml.cs  Standard.xaml  Standard.xaml.cs
Plugins/: CMakeLists.txt
Plugins/3rdparts/: CMakeLists.txt  EString.cpp  EString.hpp  IniConfigure.cpp  IniConfigure.hpp  Logger.cpp  Logger.h  Utils.cpp  Utils.h
Plugins/app/: CMakeLists.txt
Plugins/app/advanced/: CMakeLists.txt  SFMController.cpp  SFMController.h  SuperRController.cpp  SuperRController.h
Plugins/app/detracting/: CMakeLists.txt  DTracingController.cpp  DTracingController.h  app.ini
Plugins/app/filters/: CMakeLists.txt  Filters.cpp  Filters.h  main.cpp
Plugins/app/guidedFilter/: CMakeLists.txt  Standard.cpp
Plugins/app/standard/: CMakeLists.txt  Standard.cpp  Standard.h  main.cpp
Plugins/app/superR/: CMakeLists.txt  SuperR.cpp  SuperR.h  main.cpp
Plugins/app/video2mat/: CMakeLists.txt  Video2Mat.cpp  Video2Mat.h  main.cpp
(+8 files in other folders)
